--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -148,13 +148,14 @@
                 app:layout_constraintBottom_toTopOf="@+id/btn9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn2"
+                app:layout_constraintTop_toBottomOf="@+id/home"
                 app:srcCompat="@drawable/chart" />
 
             <TextView
                 android:id="@+id/incomeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:layout_marginBottom="30dp"
                 android:text="14 259,00zł"
                 android:textColor="@color/incomeColor"
@@ -260,6 +261,161 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/clothes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0.00zł"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn1"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/btn1"
+                app:layout_constraintTop_toBottomOf="@+id/btn12" />
+
+            <TextView
+                android:id="@+id/sport"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0.00zł"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn1"
+                app:layout_constraintStart_toStartOf="@+id/btn1"
+                app:layout_constraintTop_toBottomOf="@+id/btn1" />
+
+            <TextView
+                android:id="@+id/animals"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0.00zł"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn9"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/btn9"
+                app:layout_constraintTop_toBottomOf="@+id/btn9" />
+
+            <TextView
+                android:id="@+id/home"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0.00zł"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn2"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/btn2"
+                app:layout_constraintTop_toBottomOf="@+id/btn2" />
+
+            <TextView
+                android:id="@+id/entertainment"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0.00zł"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn3"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/btn3"
+                app:layout_constraintTop_toBottomOf="@+id/btn3" />
+
+            <TextView
+                android:id="@+id/shopping"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0.00zł"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn8"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/btn8"
+                app:layout_constraintTop_toBottomOf="@+id/btn8" />
+
+            <TextView
+                android:id="@+id/food"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0.00zł"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn4"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/btn4"
+                app:layout_constraintTop_toBottomOf="@+id/btn4" />
+
+            <TextView
+                android:id="@+id/taxi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0.00zł"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn4"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/btn4"
+                app:layout_constraintTop_toBottomOf="@+id/btn7" />
+
+            <TextView
+                android:id="@+id/media"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0.00zł"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn4"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/btn4"
+                app:layout_constraintTop_toBottomOf="@+id/btn6" />
+
+            <TextView
+                android:id="@+id/cosmetics"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0.00zł"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn4"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/btn4"
+                app:layout_constraintTop_toBottomOf="@+id/btn5" />
+
+            <TextView
+                android:id="@+id/transport"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0.00zł"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn1"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/btn1"
+                app:layout_constraintTop_toBottomOf="@+id/btn11" />
+
+            <TextView
+                android:id="@+id/health"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="0.00zł"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toEndOf="@+id/btn10"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/btn10"
+                app:layout_constraintTop_toBottomOf="@+id/btn10" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
